# ansible-lint-custom-strict-naming

./: Makefile  README.md  pyproject.toml
.github/workflows/: lint-python.yml  pull_request_main.yml  pull_request_release.yml  release.yml  release_test.yml
examples/sample1/: Makefile  README.md  pyproject.toml
examples/sample1/playbooks/tasks/: sample.yml
src/rules/: var_name_prefix.py
